// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should render expense summary correctly with multiple expense 1`] = `
<div>
  <h1>
    Viewing 
    23
     
    expenses
     totaling 
    $2,354,565.34
  </h1>
</div>
`;

exports[`Should render expense summary correctly with one expense 1`] = `
<div>
  <h1>
    Viewing 
    1
     
    expense
     totaling 
    $2.35
  </h1>
</div>
`;
